fix cookiebox z-index

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -217,6 +217,7 @@ button.bg-primary:hover {
   right     : 0;
   bottom    : 0;
   text-align: center;
+  z-index   : 99999;
   padding   : 1rem 2rem;
   background: rgb(71, 71, 71);
   transition: all .75s cubic-bezier(.19, 1, .22, 1);
